<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#F1E4E4"
        android:textColor="#141414"
        android:text="@string/basic_phraser"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1E4E4" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/do_you_10_speak_english" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/good_evening" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/hello" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/how_are_you" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/i_live_in" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/my_name_is" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/please" />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="3"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:textColor="#141414"
            android:background="@drawable/button_bg"
            android:text="@string/welcome" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopmusic"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#8F333030"
        android:textColor="#B9FFFFFF"
        android:text="@string/stop" />
</LinearLayout>